# os_controller_cobot_slam

./: README.md
results/: Plot_Control_input_torque.m  Plot_EE_Position_tracking_error.m  Plot__3D_OSC.m
src/ned_ros/niryo_config/: .setup_assistant  CMakeLists.txt  package.xml
src/ned_ros/niryo_config/config/: kinematics.yaml  moveit_controllers.yaml  niryo_ned2.ros2_control.xacro  niryo_ned2.srdf  niryo_ned2.urdf.xacro
src/ned_ros/niryo_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/ned_ros/niryo_robot_description/: CMakeLists.txt  package.xml
src/ned_ros/niryo_robot_description/config/: ros2_controllers.yaml
src/ned_ros/niryo_robot_description/launch/: bringup_gazebo.launch.py  display_robot.launch.py
src/ned_ros/niryo_robot_description/urdf/ned2/: ned2_prova2.urdf  new_ned2.sdfZone.Identifier  niryo_ned2.urdf  niryo_ned2.urdf.xacro
src/ned_ros/niryo_robot_description/worlds/: empty.world
src/ned_ros/niryo_robot_moveit_config/niryo_moveit_config_standalone/: CMakeLists.txt
src/ned_ros/niryo_robot_python_ros_wrapper/examples/: Ned2_demo.py
src/niryo_moveit2_config/: .setup_assistant  CMakeLists.txt  package.xml
src/niryo_moveit2_config/config/: initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  niryo_ned2.ros2_control.xacro  niryo_ned2.srdf  niryo_ned2.urdf.xacro  ros2_controllers.yaml  sensors_3d.yaml
src/niryo_moveit2_config/cpp_script/: add_boxes.cpp  chomp_traj_a.cpp  desired_trajectory.txt  desired_trajectory_2.txt  desired_trajectory_sampling.cpp  pilz_trajectory.cpp  prova.csv
src/niryo_moveit2_config/launch/: controller_spawn_prova.launch.py  demo.launch.py  desired_traj.launch.py  move_group.launch.py  moveit_rviz.launch.py  niryo.launch.py  niryo_slam.launch.py  provaVel.launch.py  provaYT.launch.py  rsp.launch.py  setup_assistant.launch.py  slam_rtab.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/op_space_controller/: CMakeLists.txt  op_space_controller_plugin.xml  package.xml
src/op_space_controller/config/: niryo_ned2_pinoc.urdf  op_space_controller_parameters.yaml
src/op_space_controller/include/op_space_controller/: op_space_controller.hpp  visibility_control.h
src/op_space_controller/src/: op_space_controller.cpp
src/worlds_niryo/: CMakeLists.txt  package.xml
src/worlds_niryo/launch/: prova_mondo.launch.py
src/worlds_niryo/worlds/: pick_and_place_workplace_cube.world
