<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>op_space_controller</name>
  <version>0.1.0</version>
  <description>Operational space controller for the Niryo Ned2 manipulator, using Pinocchio for dynamics and SLAM-based pose estimation feedback for trajectory tracking.</description>
  <maintainer email="savino.tommaso10@gmail.com">Tommaso Savino</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>pinocchio</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>octomap_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
 <!-- <depend>tf2_geometry_msgs</depend> -->
  <depend>tf2_eigen</depend>
  <!-- <depend>Eigen3</depend> -->
  <depend>eigen3_cmake_module</depend>
  <depend>std_msgs</depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <controller_interface plugin="${prefix}/op_space_controller_plugin.xml"/>
  </export>
</package>
